[gd_scene load_steps=13 format=3 uid="uid://babt23gkc0yru"]

[ext_resource type="Script" path="res://Scenes/Door/door_main.gd" id="1_8jcdo"]
[ext_resource type="Texture2D" uid="uid://cw2bosj0kc31u" path="res://Sprites/Door/godot_door0.png" id="2_nb3kr"]
[ext_resource type="Texture2D" uid="uid://bodkbdav26848" path="res://Sprites/Door/godot_door1.png" id="2_plc3w"]
[ext_resource type="Texture2D" uid="uid://nkbxs1n2c408" path="res://Sprites/Door/godot_door2.png" id="3_dso4k"]
[ext_resource type="Texture2D" uid="uid://qlb7a74xgklt" path="res://Sprites/Door/godot_door3.png" id="4_ato0o"]
[ext_resource type="Texture2D" uid="uid://dahbd5r3donhh" path="res://Sprites/Door/godot_door4.png" id="5_sa785"]
[ext_resource type="Texture2D" uid="uid://dja5lj1qbdmpu" path="res://Sprites/Door/godot_door5.png" id="6_aby56"]
[ext_resource type="Texture2D" uid="uid://bm1h65ucaj2dt" path="res://Sprites/Door/godot_doorF.png" id="7_dgvte"]
[ext_resource type="Theme" uid="uid://cct0h47xho7w6" path="res://Scenes/Masters/main_menu.tres" id="9_2st3q"]
[ext_resource type="AudioStream" uid="uid://c0p0d3777din4" path="res://Sounds/SFX/Lock.mp3" id="9_lmgxp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4w4e1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1upew"]

[node name="DoorMain" type="Node2D"]
script = ExtResource("1_8jcdo")
sprites = Array[Texture2D]([ExtResource("2_plc3w"), ExtResource("3_dso4k"), ExtResource("4_ato0o"), ExtResource("5_sa785"), ExtResource("6_aby56"), ExtResource("7_dgvte")])

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_nb3kr")

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="Button0" type="Button" parent="Buttons"]
modulate = Color(1, 1, 1, 0.188235)
layout_mode = 0
offset_left = 180.0
offset_top = -37.0
offset_right = 316.0
offset_bottom = 326.0
scale = Vector2(0.215, 0.215)
theme_override_styles/focus = SubResource("StyleBoxEmpty_4w4e1")
flat = true

[node name="Button1" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 245.0
offset_top = -178.0
offset_right = 296.0
offset_bottom = -93.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_1upew")
flat = true

[node name="Button2" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = -221.0
offset_top = -171.0
offset_right = 124.0
offset_bottom = -125.0
rotation = -0.534402
theme_override_styles/focus = SubResource("StyleBoxEmpty_1upew")
flat = true

[node name="Button3" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 6.0
offset_top = 115.0
offset_right = 52.0
offset_bottom = 179.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_1upew")
flat = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -554.0
offset_top = -219.0
offset_right = -312.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Label" type="Label" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(230, 280)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("9_2st3q")
theme_override_font_sizes/font_size = 16
autowrap_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_lmgxp")
bus = &"SFX"

[node name="MMButton" type="Area2D" parent="."]
position = Vector2(408, 182)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MMButton"]
position = Vector2(22, -62)
polygon = PackedVector2Array(0, 1, 83, 120, -35, 147, -118, 28)

[connection signal="pressed" from="Buttons/Button0" to="." method="window_shower" binds= [0]]
[connection signal="pressed" from="Buttons/Button1" to="." method="window_shower" binds= [1]]
[connection signal="pressed" from="Buttons/Button2" to="." method="window_shower" binds= [2]]
[connection signal="pressed" from="Buttons/Button3" to="." method="window_shower" binds= [3]]
[connection signal="input_event" from="MMButton" to="." method="_on_input_event"]
